--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,88 @@
 html {
     width: 100vw;
     height: 100vh;
+    font-family: 'Fira Sans', sans-serif;
 }
 
 body {
     width: 100%;
     height: 100%;
-    display: flex; 
+    display: flex;
     justify-content: center;
     align-items: center;
+    gap: 2.5%;
+}
+
+#title-container {
+    align-self: center;
+    justify-self: unset;
+}
+
+#title-container:first-child {
+    
+    
 }
 
 #control-panel {
-    border: 1px solid black;
     width: 300px;
     height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-#player {
+
+#color-picker {
+    -webkit-appearance: none;
+    width: 80px;
+    height: 80px;
+    border: none;
+    border-radius: 50%;
+}
+
+#color-picker::-webkit-color-swatch-wrapper {
+    padding: 0;
+}
+
+#color-picker::-webkit-color-swatch {
+    border: none;
+    border-radius: 50px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+}
+
+.button {
+    border: none;
+    background-color: white;
+    border: 1px solid black;
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 1.5rem;
+    padding: 0.5rem 2rem;
+}
+
+.button:hover {
+    cursor: pointer;
+    color: white;
+    background-color: black;
+    transition: 0.3s;
+}
+
+#board {
+    box-sizing: border-box;
     width: 500px;
     height: 500px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .row {
     display: flex;
-}  
+}
 
 .cell {
-    border: 1px solid black;
-    
+    box-sizing: border-box;
+
 }
 
 .black {
